--- a/templates/relatorio_premium.html
+++ b/templates/relatorio_premium.html
@@ -15,6 +15,13 @@
   <title>Relatório Espiritual Completo</title>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <style>
+    
+img.emoji {
+  height: 1em;
+  width: 1em;
+  margin: 0 .05em 0 .1em;
+  vertical-align: -0.1em;
+}
      body {
    font-family: Arial, sans-serif;
    padding: 60px 40px 40px 40px; /* Topo aumentado */
